examples/test/testpolicy10545.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10545
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key39: value20
      key48: value45
      key22: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value10
          key24: value4
          key40: value36
